# DoomMC

./: .gitmodules  README.md  build.gradle  build.sh  gradle.properties  install_jdk17.sh
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
mod/: build.gradle
mod/src/main/java/com/netherairtune/doommc/: DoomMC.java
mod/src/main/resources/: fabric.mod.json
native/: CMakeLists.txt  DoomJNI.c
native/toolchains/: android-arm64.cmake  linux-aarch64.cmake  windows-x86.cmake
src/main/java/com/netherairtune/doommc/: DoomConfig.java  DoomJNI.java  DoomMC.java  DoomMCClient.java  WadHelper.java
src/main/java/com/netherairtune/doommc/block/: DoomBlock.java
src/main/java/com/netherairtune/doommc/client/: DoomScreen.java
src/main/java/com/netherairtune/doommc/registry/: ModBlocks.java
src/main/resources/: fabric.mod.json
src/main/resources/assets/doommc/blockstates/: doom_block.json
src/main/resources/assets/doommc/models/block/: doom_block.json
src/main/resources/assets/doommc/models/item/: doom_block.json
